Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14039,7 +14039,9 @@
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 10.298295454545455\tLoss: 12.202\n",
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 10.511363636363637\tLoss: 16.962\n",
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 12.855113636363637\tLoss: 16.354\n",
-      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 36.15056818181818\tLoss: 7.632\n"
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 36.15056818181818\tLoss: 7.632\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 81.60511363636364\tLoss: 1.457\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 91.19318181818181\tLoss: 0.562\n"
      ]
     }
    ],
