Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13983,7 +13983,11 @@
       "count: 224\tCoord: [0.4 0. ]\t\tAcc: 50.28409090909091\tLoss: 6.817\n",
       "count: 226\tCoord: [0.6 0. ]\t\tAcc: 28.480113636363637\tLoss: 20.634\n",
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 16.832386363636363\tLoss: 42.4\n",
-      "Coord: [1. 0.]\tAcc: 19\tLoss: 86.33684\r"
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 14.417613636363637\tLoss: 87.331\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 9.375\tLoss: 92.898\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 9.659090909090908\tLoss: 52.096\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 12.926136363636363\tLoss: 21.132\n",
+      "Coord: [-0.4  0.1]\tAcc: 36\tLoss: 9.036\r"
      ]
     }
    ],
