Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14091,7 +14091,21 @@
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 21.37784090909091\tLoss: 41.331\n",
       "count: 230\tCoord: [1. 0.]\t\tAcc: 18.394886363636363\tLoss: 92.176\n",
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 11.221590909090908\tLoss: 36.13\n",
-      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 13.707386363636363\tLoss: 15.712\n"
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 13.707386363636363\tLoss: 15.712\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 23.508522727272727\tLoss: 6.944\n",
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 56.17897727272727\tLoss: 2.868\n",
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 94.10511363636364\tLoss: 0.234\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 96.44886363636364\tLoss: 0.14\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 66.47727272727273\tLoss: 2.833\n",
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 36.29261363636363\tLoss: 10.501\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 22.443181818181817\tLoss: 26.004\n",
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 18.607954545454547\tLoss: 57.568\n"
      ]
     }
    ],
