--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14041,7 +14041,9 @@
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 12.855113636363637\tLoss: 16.354\n",
       "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 36.15056818181818\tLoss: 7.632\n",
       "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 81.60511363636364\tLoss: 1.457\n",
-      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 91.19318181818181\tLoss: 0.562\n"
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 91.19318181818181\tLoss: 0.562\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 65.69602272727273\tLoss: 3.667\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 38.84943181818182\tLoss: 10.624\n"
      ]
     }
    ],
