Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13987,7 +13987,11 @@
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 9.375\tLoss: 92.898\n",
       "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 9.659090909090908\tLoss: 52.096\n",
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 12.926136363636363\tLoss: 21.132\n",
-      "Coord: [-0.4  0.1]\tAcc: 36\tLoss: 9.036\r"
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 59.30397727272727\tLoss: 3.159\n",
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 95.8096590909091\tLoss: 0.207\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 95.8096590909091\tLoss: 0.159\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 68.96306818181819\tLoss: 2.534\n",
+      "Coord: [0.5 0.1]\tAcc: 48\tLoss: 11.645\r"
      ]
     }
    ],
