--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14043,7 +14043,9 @@
       "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 81.60511363636364\tLoss: 1.457\n",
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 91.19318181818181\tLoss: 0.562\n",
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 65.69602272727273\tLoss: 3.667\n",
-      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 38.84943181818182\tLoss: 10.624\n"
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 38.84943181818182\tLoss: 10.624\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 25.639204545454547\tLoss: 15.91\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 18.892045454545453\tLoss: 17.984\n"
      ]
     }
    ],
