Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14045,7 +14045,10 @@
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 65.69602272727273\tLoss: 3.667\n",
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 38.84943181818182\tLoss: 10.624\n",
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 25.639204545454547\tLoss: 15.91\n",
-      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 18.892045454545453\tLoss: 17.984\n"
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 18.892045454545453\tLoss: 17.984\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 16.193181818181817\tLoss: 18.325\n",
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 10.369318181818182\tLoss: 11.777\n",
+      "Coord: [-0.8 -0.1]\tAcc: 12\tLoss: 14.396\r"
      ]
     }
    ],
