Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -13991,7 +13991,17 @@
       "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 95.8096590909091\tLoss: 0.207\n",
       "count: 242\tCoord: [0.1 0.1]\t\tAcc: 95.8096590909091\tLoss: 0.159\n",
       "count: 244\tCoord: [0.3 0.1]\t\tAcc: 68.96306818181819\tLoss: 2.534\n",
-      "Coord: [0.5 0.1]\tAcc: 48\tLoss: 11.645\r"
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 35.65340909090909\tLoss: 14.073\n",
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 20.454545454545453\tLoss: 32.073\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 16.193181818181817\tLoss: 64.106\n",
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 8.59375\tLoss: 143.333\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 9.659090909090908\tLoss: 70.828\n"
      ]
     }
    ],
