--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14105,7 +14105,15 @@
      "output_type": "stream",
      "text": [
       "count: 248\tCoord: [0.7 0.1]\t\tAcc: 22.443181818181817\tLoss: 26.004\n",
-      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 18.607954545454547\tLoss: 57.568\n"
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 18.607954545454547\tLoss: 57.568\n",
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 10.795454545454545\tLoss: 55.415\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 10.227272727272727\tLoss: 24.798\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 15.482954545454545\tLoss: 10.626\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 31.392045454545453\tLoss: 5.264\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 70.66761363636364\tLoss: 1.76\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 94.0340909090909\tLoss: 0.216\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 78.83522727272727\tLoss: 1.347\n",
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 43.46590909090909\tLoss: 6.619\n"
      ]
     }
    ],
