--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14048,7 +14048,9 @@
       "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 18.892045454545453\tLoss: 17.984\n",
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 16.193181818181817\tLoss: 18.325\n",
       "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 10.369318181818182\tLoss: 11.777\n",
-      "Coord: [-0.8 -0.1]\tAcc: 12\tLoss: 14.396\r"
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 11.150568181818182\tLoss: 15.341\n",
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 19.318181818181817\tLoss: 11.746\n",
+      "Coord: [-0.4 -0.1]\tAcc: 46\tLoss: 6.677\r"
      ]
     }
    ],
