Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14001,7 +14001,11 @@
      "text": [
       "count: 250\tCoord: [0.9 0.1]\t\tAcc: 16.193181818181817\tLoss: 64.106\n",
       "count: 252\tCoord: [-1.   0.2]\t\tAcc: 8.59375\tLoss: 143.333\n",
-      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 9.659090909090908\tLoss: 70.828\n"
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 9.659090909090908\tLoss: 70.828\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 9.801136363636363\tLoss: 38.372\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 26.988636363636363\tLoss: 10.763\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 77.41477272727273\tLoss: 1.366\n",
+      "Coord: [0.  0.2]\tAcc: 121\tLoss: 0.20202\r"
      ]
     }
    ],
