--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14050,7 +14050,9 @@
       "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 10.369318181818182\tLoss: 11.777\n",
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 11.150568181818182\tLoss: 15.341\n",
       "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 19.318181818181817\tLoss: 11.746\n",
-      "Coord: [-0.3 -0.1]\tAcc: 83\tLoss: 2.492\r"
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 64.77272727272727\tLoss: 2.966\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 95.52556818181819\tLoss: 0.203\n",
+      "Coord: [ 0.  -0.1]\tAcc: 122\tLoss: 0.137\r"
      ]
     }
    ],
