Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14052,7 +14052,9 @@
       "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 19.318181818181817\tLoss: 11.746\n",
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 64.77272727272727\tLoss: 2.966\n",
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 95.52556818181819\tLoss: 0.203\n",
-      "Coord: [ 0.  -0.1]\tAcc: 122\tLoss: 0.137\r"
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 90.9090909090909\tLoss: 0.475\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 56.67613636363637\tLoss: 5.309\n",
+      "Coord: [ 0.4 -0.1]\tAcc: 56\tLoss: 6.9726\r"
      ]
     }
    ],
