Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14005,7 +14005,11 @@
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 9.801136363636363\tLoss: 38.372\n",
       "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 26.988636363636363\tLoss: 10.763\n",
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 77.41477272727273\tLoss: 1.366\n",
-      "Coord: [0.  0.2]\tAcc: 121\tLoss: 0.20202\r"
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 92.96875\tLoss: 0.292\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 80.68181818181819\tLoss: 1.033\n",
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 45.66761363636363\tLoss: 9.326\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 24.71590909090909\tLoss: 24.771\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 18.323863636363637\tLoss: 48.274\n"
      ]
     }
    ],
