Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14113,7 +14113,15 @@
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 70.66761363636364\tLoss: 1.76\n",
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 94.0340909090909\tLoss: 0.216\n",
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 78.83522727272727\tLoss: 1.347\n",
-      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 43.46590909090909\tLoss: 6.619\n"
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 43.46590909090909\tLoss: 6.619\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 25.923295454545453\tLoss: 18.339\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 18.892045454545453\tLoss: 39.42\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 16.69034090909091\tLoss: 86.27\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 10.298295454545455\tLoss: 43.427\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 11.789772727272727\tLoss: 19.208\n",
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 19.176136363636363\tLoss: 8.148\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 44.74431818181818\tLoss: 4.403\n",
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 76.49147727272727\tLoss: 1.41\n"
      ]
     }
    ],
