Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14054,7 +14054,9 @@
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 95.52556818181819\tLoss: 0.203\n",
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 90.9090909090909\tLoss: 0.475\n",
       "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 56.67613636363637\tLoss: 5.309\n",
-      "Coord: [ 0.4 -0.1]\tAcc: 56\tLoss: 6.9726\r"
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 32.38636363636363\tLoss: 11.752\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 22.088068181818183\tLoss: 14.938\n",
+      "Coord: [ 0.8 -0.1]\tAcc: 32\tLoss: 12.464\r"
      ]
     }
    ],
