Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14009,7 +14009,11 @@
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 80.68181818181819\tLoss: 1.033\n",
       "count: 266\tCoord: [0.4 0.2]\t\tAcc: 45.66761363636363\tLoss: 9.326\n",
       "count: 268\tCoord: [0.6 0.2]\t\tAcc: 24.71590909090909\tLoss: 24.771\n",
-      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 18.323863636363637\tLoss: 48.274\n"
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 18.323863636363637\tLoss: 48.274\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 15.411931818181818\tLoss: 95.562\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 9.446022727272727\tLoss: 98.115\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 9.730113636363637\tLoss: 58.908\n",
+      "Coord: [-0.6  0.3]\tAcc: 12\tLoss: 40.318\r"
      ]
     }
    ],
