--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14056,7 +14056,9 @@
       "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 56.67613636363637\tLoss: 5.309\n",
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 32.38636363636363\tLoss: 11.752\n",
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 22.088068181818183\tLoss: 14.938\n",
-      "Coord: [ 0.8 -0.1]\tAcc: 32\tLoss: 12.464\r"
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 17.329545454545453\tLoss: 15.923\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 10.369318181818182\tLoss: 9.223\n",
+      "Coord: [-0.9  0. ]\tAcc: 14\tLoss: 9.6478\r"
      ]
     }
    ],
