--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14058,7 +14058,9 @@
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 22.088068181818183\tLoss: 14.938\n",
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 17.329545454545453\tLoss: 15.923\n",
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 10.369318181818182\tLoss: 9.223\n",
-      "Coord: [-0.9  0. ]\tAcc: 14\tLoss: 9.6478\r"
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 11.079545454545455\tLoss: 12.181\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 14.630681818181818\tLoss: 13.44\n",
+      "Coord: [-0.5  0. ]\tAcc: 24\tLoss: 10.538\r"
      ]
     }
    ],
