--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14013,7 +14013,11 @@
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 15.411931818181818\tLoss: 95.562\n",
       "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 9.446022727272727\tLoss: 98.115\n",
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 9.730113636363637\tLoss: 58.908\n",
-      "Coord: [-0.6  0.3]\tAcc: 12\tLoss: 40.318\r"
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 11.860795454545455\tLoss: 26.729\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 44.67329545454545\tLoss: 5.799\n",
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 80.25568181818181\tLoss: 1.308\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 82.10227272727273\tLoss: 0.971\n",
+      "Coord: [0.3 0.3]\tAcc: 80\tLoss: 4.9931\r"
      ]
     }
    ],
