Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14121,7 +14121,15 @@
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 11.789772727272727\tLoss: 19.208\n",
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 19.176136363636363\tLoss: 8.148\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 44.74431818181818\tLoss: 4.403\n",
-      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 76.49147727272727\tLoss: 1.41\n"
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 76.49147727272727\tLoss: 1.41\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 80.61079545454545\tLoss: 1.179\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 52.76988636363637\tLoss: 4.745\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 29.261363636363637\tLoss: 13.803\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 20.525568181818183\tLoss: 30.481\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 16.264204545454547\tLoss: 62.686\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 9.019886363636363\tLoss: 96.452\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 10.227272727272727\tLoss: 37.638\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 14.914772727272727\tLoss: 15.22\n"
      ]
     }
    ],
