Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14060,7 +14060,9 @@
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 10.369318181818182\tLoss: 9.223\n",
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 11.079545454545455\tLoss: 12.181\n",
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 14.630681818181818\tLoss: 13.44\n",
-      "Coord: [-0.5  0. ]\tAcc: 24\tLoss: 10.538\r"
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 38.49431818181818\tLoss: 6.729\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 86.64772727272727\tLoss: 0.712\n",
+      "Coord: [-0.1  0. ]\tAcc: 125\tLoss: 0.063\r"
      ]
     }
    ],
