Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14062,7 +14062,9 @@
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 14.630681818181818\tLoss: 13.44\n",
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 38.49431818181818\tLoss: 6.729\n",
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 86.64772727272727\tLoss: 0.712\n",
-      "Coord: [-0.1  0. ]\tAcc: 125\tLoss: 0.063\r"
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 98.57954545454545\tLoss: 0.043\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 76.77556818181819\tLoss: 1.693\n",
+      "Coord: [0.4 0. ]\tAcc: 59\tLoss: 7.261\r"
      ]
     }
    ],
