--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14017,7 +14017,11 @@
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 44.67329545454545\tLoss: 5.799\n",
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 80.25568181818181\tLoss: 1.308\n",
       "count: 284\tCoord: [0.1 0.3]\t\tAcc: 82.10227272727273\tLoss: 0.971\n",
-      "Coord: [0.3 0.3]\tAcc: 80\tLoss: 4.9931\r"
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 54.54545454545455\tLoss: 6.276\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 30.255681818181817\tLoss: 19.809\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 19.744318181818183\tLoss: 36.137\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 16.40625\tLoss: 67.392\n",
+      "Coord: [1.  0.3]\tAcc: 14\tLoss: 91.4897\r"
      ]
     }
    ],
