Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14064,7 +14064,9 @@
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 86.64772727272727\tLoss: 0.712\n",
       "count: 220\tCoord: [0. 0.]\t\tAcc: 98.57954545454545\tLoss: 0.043\n",
       "count: 222\tCoord: [0.2 0. ]\t\tAcc: 76.77556818181819\tLoss: 1.693\n",
-      "Coord: [0.4 0. ]\tAcc: 59\tLoss: 7.261\r"
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 44.03409090909091\tLoss: 7.712\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 26.136363636363637\tLoss: 12.272\n",
+      "Coord: [0.8 0. ]\tAcc: 24\tLoss: 14.253\r"
      ]
     }
    ],
