--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14021,7 +14021,11 @@
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 30.255681818181817\tLoss: 19.809\n",
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 19.744318181818183\tLoss: 36.137\n",
       "count: 292\tCoord: [0.9 0.3]\t\tAcc: 16.40625\tLoss: 67.392\n",
-      "Coord: [1.  0.3]\tAcc: 14\tLoss: 91.4897\r"
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 8.59375\tLoss: 178.215\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 9.659090909090908\tLoss: 87.682\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 9.801136363636363\tLoss: 46.341\n",
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 18.536931818181817\tLoss: 17.691\n",
+      "Coord: [-0.3  0.4]\tAcc: 48\tLoss: 8.7618\r"
      ]
     }
    ],
