Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14066,7 +14066,9 @@
       "count: 222\tCoord: [0.2 0. ]\t\tAcc: 76.77556818181819\tLoss: 1.693\n",
       "count: 224\tCoord: [0.4 0. ]\t\tAcc: 44.03409090909091\tLoss: 7.712\n",
       "count: 226\tCoord: [0.6 0. ]\t\tAcc: 26.136363636363637\tLoss: 12.272\n",
-      "Coord: [0.8 0. ]\tAcc: 24\tLoss: 14.253\r"
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 18.678977272727273\tLoss: 13.786\n",
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 16.90340909090909\tLoss: 13.909\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 10.9375\tLoss: 10.151\n"
      ]
     }
    ],
