--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14129,7 +14129,15 @@
       "count: 292\tCoord: [0.9 0.3]\t\tAcc: 16.264204545454547\tLoss: 62.686\n",
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 9.019886363636363\tLoss: 96.452\n",
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 10.227272727272727\tLoss: 37.638\n",
-      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 14.914772727272727\tLoss: 15.22\n"
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 14.914772727272727\tLoss: 15.22\n",
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 25.78125\tLoss: 8.174\n",
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 53.26704545454545\tLoss: 4.043\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 69.38920454545455\tLoss: 2.376\n",
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 56.53409090909091\tLoss: 4.294\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 33.45170454545455\tLoss: 11.251\n",
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 21.448863636363637\tLoss: 25.621\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 17.116477272727273\tLoss: 51.755\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 14.0625\tLoss: 103.196\n"
      ]
     }
    ],
