Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14025,7 +14025,11 @@
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 9.659090909090908\tLoss: 87.682\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 9.801136363636363\tLoss: 46.341\n",
       "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 18.536931818181817\tLoss: 17.691\n",
-      "Coord: [-0.3  0.4]\tAcc: 48\tLoss: 8.7618\r"
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 54.54545454545455\tLoss: 4.098\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 72.72727272727273\tLoss: 2.005\n",
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 60.15625\tLoss: 4.125\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 36.00852272727273\tLoss: 15.74\n",
+      "Coord: [0.5 0.4]\tAcc: 35\tLoss: 19.974\r"
      ]
     }
    ],
