--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14068,7 +14068,9 @@
       "count: 226\tCoord: [0.6 0. ]\t\tAcc: 26.136363636363637\tLoss: 12.272\n",
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 18.678977272727273\tLoss: 13.786\n",
       "count: 230\tCoord: [1. 0.]\t\tAcc: 16.90340909090909\tLoss: 13.909\n",
-      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 10.9375\tLoss: 10.151\n"
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 10.9375\tLoss: 10.151\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 12.073863636363637\tLoss: 12.617\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 19.886363636363637\tLoss: 10.92\n"
      ]
     }
    ],
