--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -13833,9 +13833,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# ==== 3. Weight - Orthogonal - whole norm ===="
    ]
@@ -13850,8 +13848,7 @@
     },
     "code_folding": [
      0
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [
     {
@@ -13938,8 +13935,7 @@
     "ExecuteTime": {
      "end_time": "2019-05-05T04:24:19.776146Z",
      "start_time": "2019-05-05T04:24:15.341442Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -13966,7 +13962,6 @@
     "ExecuteTime": {
      "start_time": "2019-05-05T04:24:26.165Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -14137,7 +14132,15 @@
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 33.45170454545455\tLoss: 11.251\n",
       "count: 310\tCoord: [0.6 0.4]\t\tAcc: 21.448863636363637\tLoss: 25.621\n",
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 17.116477272727273\tLoss: 51.755\n",
-      "count: 314\tCoord: [1.  0.4]\t\tAcc: 14.0625\tLoss: 103.196\n"
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 14.0625\tLoss: 103.196\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.085227272727273\tLoss: 84.801\n",
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 10.511363636363637\tLoss: 32.191\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 16.12215909090909\tLoss: 15.09\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 30.326704545454547\tLoss: 8.292\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 52.34375\tLoss: 4.956\n",
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 53.69318181818182\tLoss: 5.1\n",
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 37.00284090909091\tLoss: 10.214\n",
+      "Coord: [0.4 0.5]\tAcc: 38\tLoss: 14.639\r"
      ]
     }
    ],
@@ -14187,8 +14190,7 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-05-05T04:24:32.045Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
