--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14029,7 +14029,11 @@
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 72.72727272727273\tLoss: 2.005\n",
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 60.15625\tLoss: 4.125\n",
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 36.00852272727273\tLoss: 15.74\n",
-      "Coord: [0.5 0.4]\tAcc: 35\tLoss: 19.974\r"
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 21.519886363636363\tLoss: 31.169\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 17.258522727272727\tLoss: 46.809\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 16.477272727272727\tLoss: 92.212\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 9.161931818181818\tLoss: 134.736\n",
+      "Coord: [-0.8  0.5]\tAcc: 11\tLoss: 100.283\r"
      ]
     }
    ],
