Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14140,7 +14140,7 @@
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 52.34375\tLoss: 4.956\n",
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 53.69318181818182\tLoss: 5.1\n",
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 37.00284090909091\tLoss: 10.214\n",
-      "Coord: [0.4 0.5]\tAcc: 38\tLoss: 14.639\r"
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 22.727272727272727\tLoss: 22.467\n"
      ]
     }
    ],
