--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14072,7 +14072,9 @@
       "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 12.073863636363637\tLoss: 12.617\n",
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 19.886363636363637\tLoss: 10.92\n",
       "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 61.71875\tLoss: 3.182\n",
-      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 94.2471590909091\tLoss: 0.259\n"
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 94.2471590909091\tLoss: 0.259\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 89.77272727272727\tLoss: 0.49\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 55.18465909090909\tLoss: 4.64\n"
      ]
     }
    ],
