--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14033,7 +14033,11 @@
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 17.258522727272727\tLoss: 46.809\n",
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 16.477272727272727\tLoss: 92.212\n",
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 9.161931818181818\tLoss: 134.736\n",
-      "Coord: [-0.8  0.5]\tAcc: 11\tLoss: 100.283\r"
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 9.730113636363637\tLoss: 74.031\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 10.511363636363637\tLoss: 36.815\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 26.27840909090909\tLoss: 12.802\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 53.125\tLoss: 4.417\n",
+      "Coord: [0.  0.5]\tAcc: 74\tLoss: 3.993\r"
      ]
     }
    ],
