Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14082,7 +14082,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 20.880681818181817\tLoss: 12.117\n"
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 20.880681818181817\tLoss: 12.117\n",
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 17.47159090909091\tLoss: 12.51\n",
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 10.582386363636363\tLoss: 10.852\n"
      ]
     }
    ],
