Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14037,7 +14037,11 @@
       "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 10.511363636363637\tLoss: 36.815\n",
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 26.27840909090909\tLoss: 12.802\n",
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 53.125\tLoss: 4.417\n",
-      "Coord: [0.  0.5]\tAcc: 74\tLoss: 3.993\r"
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 56.39204545454545\tLoss: 4.38\n",
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 39.0625\tLoss: 11.339\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 24.147727272727273\tLoss: 25.47\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 17.47159090909091\tLoss: 38.997\n",
+      "Coord: [0.8 0.5]\tAcc: 15\tLoss: 47.334\r"
      ]
     }
    ],
