Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14140,7 +14140,15 @@
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 52.34375\tLoss: 4.956\n",
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 53.69318181818182\tLoss: 5.1\n",
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 37.00284090909091\tLoss: 10.214\n",
-      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 22.727272727272727\tLoss: 22.467\n"
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 22.727272727272727\tLoss: 22.467\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 17.68465909090909\tLoss: 46.585\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 15.269886363636363\tLoss: 91.928\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 9.730113636363637\tLoss: 217.827\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 11.221590909090908\tLoss: 72.913\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 13.352272727272727\tLoss: 30.044\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 18.394886363636363\tLoss: 16.402\n",
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 33.09659090909091\tLoss: 9.221\n",
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 43.53693181818182\tLoss: 7.42\n"
      ]
     }
    ],
