--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14084,7 +14084,10 @@
      "text": [
       "count: 248\tCoord: [0.7 0.1]\t\tAcc: 20.880681818181817\tLoss: 12.117\n",
       "count: 250\tCoord: [0.9 0.1]\t\tAcc: 17.47159090909091\tLoss: 12.51\n",
-      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 10.582386363636363\tLoss: 10.852\n"
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 10.582386363636363\tLoss: 10.852\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 12.357954545454545\tLoss: 11.306\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 14.275568181818182\tLoss: 12.422\n",
+      "Coord: [-0.5  0.2]\tAcc: 27\tLoss: 11.077\r"
      ]
     }
    ],
