Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14041,7 +14041,11 @@
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 39.0625\tLoss: 11.339\n",
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 24.147727272727273\tLoss: 25.47\n",
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 17.47159090909091\tLoss: 38.997\n",
-      "Coord: [0.8 0.5]\tAcc: 15\tLoss: 47.334\r"
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 17.1875\tLoss: 64.279\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 8.59375\tLoss: 243.509\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 9.517045454545455\tLoss: 107.012\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 9.801136363636363\tLoss: 62.084\n",
+      "Coord: [-0.5  0.6]\tAcc: 12\tLoss: 43.713\r"
      ]
     }
    ],
