--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14087,7 +14087,9 @@
       "count: 252\tCoord: [-1.   0.2]\t\tAcc: 10.582386363636363\tLoss: 10.852\n",
       "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 12.357954545454545\tLoss: 11.306\n",
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 14.275568181818182\tLoss: 12.422\n",
-      "Coord: [-0.5  0.2]\tAcc: 27\tLoss: 11.077\r"
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 33.02556818181818\tLoss: 7.853\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 75.63920454545455\tLoss: 1.622\n",
+      "Coord: [-0.1  0.2]\tAcc: 107\tLoss: 0.862\r"
      ]
     }
    ],
