--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14089,7 +14089,9 @@
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 14.275568181818182\tLoss: 12.422\n",
       "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 33.02556818181818\tLoss: 7.853\n",
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 75.63920454545455\tLoss: 1.622\n",
-      "Coord: [-0.1  0.2]\tAcc: 107\tLoss: 0.862\r"
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 87.57102272727273\tLoss: 0.634\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 64.77272727272727\tLoss: 2.959\n",
+      "Coord: [0.3 0.2]\tAcc: 54\tLoss: 5.075\r"
      ]
     }
    ],
