Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14045,7 +14045,11 @@
       "count: 336\tCoord: [-1.   0.6]\t\tAcc: 8.59375\tLoss: 243.509\n",
       "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 9.517045454545455\tLoss: 107.012\n",
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 9.801136363636363\tLoss: 62.084\n",
-      "Coord: [-0.5  0.6]\tAcc: 12\tLoss: 43.713\r"
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 13.139204545454545\tLoss: 28.695\n",
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 29.616477272727273\tLoss: 9.906\n",
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 44.67329545454545\tLoss: 6.696\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 38.49431818181818\tLoss: 9.437\n",
+      "Coord: [0.3 0.6]\tAcc: 44\tLoss: 10.698\r"
      ]
     }
    ],
