Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14148,7 +14148,15 @@
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 13.352272727272727\tLoss: 30.044\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 18.394886363636363\tLoss: 16.402\n",
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 33.09659090909091\tLoss: 9.221\n",
-      "count: 346\tCoord: [0.  0.6]\t\tAcc: 43.53693181818182\tLoss: 7.42\n"
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 43.53693181818182\tLoss: 7.42\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 36.36363636363637\tLoss: 10.518\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 23.792613636363637\tLoss: 21.382\n",
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 17.96875\tLoss: 43.006\n",
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 14.914772727272727\tLoss: 85.793\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 13.423295454545455\tLoss: 164.24\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.582386363636363\tLoss: 177.045\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 12.642045454545455\tLoss: 61.9\n",
+      "Coord: [-0.5  0.7]\tAcc: 19\tLoss: 29.318\r"
      ]
     }
    ],
