Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14091,7 +14091,9 @@
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 75.63920454545455\tLoss: 1.622\n",
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 87.57102272727273\tLoss: 0.634\n",
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 64.77272727272727\tLoss: 2.959\n",
-      "Coord: [0.3 0.2]\tAcc: 54\tLoss: 5.075\r"
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 35.79545454545455\tLoss: 7.731\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 23.72159090909091\tLoss: 10.828\n",
+      "Coord: [0.7 0.2]\tAcc: 33\tLoss: 9.9629\r"
      ]
     }
    ],
