Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14049,7 +14049,11 @@
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 29.616477272727273\tLoss: 9.906\n",
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 44.67329545454545\tLoss: 6.696\n",
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 38.49431818181818\tLoss: 9.437\n",
-      "Coord: [0.3 0.6]\tAcc: 44\tLoss: 10.698\r"
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 26.775568181818183\tLoss: 18.855\n",
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 18.46590909090909\tLoss: 33.13\n",
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 14.772727272727273\tLoss: 50.64\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 14.630681818181818\tLoss: 97.707\n",
+      "Coord: [-1.   0.7]\tAcc: 8\tLoss: 266.0443\r"
      ]
     }
    ],
