--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14093,7 +14093,9 @@
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 64.77272727272727\tLoss: 2.959\n",
       "count: 266\tCoord: [0.4 0.2]\t\tAcc: 35.79545454545455\tLoss: 7.731\n",
       "count: 268\tCoord: [0.6 0.2]\t\tAcc: 23.72159090909091\tLoss: 10.828\n",
-      "Coord: [0.7 0.2]\tAcc: 33\tLoss: 9.9629\r"
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 19.460227272727273\tLoss: 11.591\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 15.056818181818182\tLoss: 11.843\n",
+      "Coord: [-1.   0.3]\tAcc: 22\tLoss: 11.186\r"
      ]
     }
    ],
