Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14156,7 +14156,12 @@
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 13.423295454545455\tLoss: 164.24\n",
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 10.582386363636363\tLoss: 177.045\n",
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 12.642045454545455\tLoss: 61.9\n",
-      "Coord: [-0.5  0.7]\tAcc: 19\tLoss: 29.318\r"
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 14.204545454545455\tLoss: 32.915\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 20.170454545454547\tLoss: 16.944\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 32.95454545454545\tLoss: 11.466\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 31.74715909090909\tLoss: 12.704\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 23.224431818181817\tLoss: 22.024\n",
+      "Coord: [0.4 0.7]\tAcc: 30\tLoss: 29.298\r"
      ]
     }
    ],
