Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14095,7 +14095,9 @@
       "count: 268\tCoord: [0.6 0.2]\t\tAcc: 23.72159090909091\tLoss: 10.828\n",
       "count: 270\tCoord: [0.8 0.2]\t\tAcc: 19.460227272727273\tLoss: 11.591\n",
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 15.056818181818182\tLoss: 11.843\n",
-      "Coord: [-1.   0.3]\tAcc: 22\tLoss: 11.186\r"
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 11.008522727272727\tLoss: 11.618\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 12.784090909090908\tLoss: 12.459\n",
+      "Coord: [-0.6  0.3]\tAcc: 20\tLoss: 12.147\r"
      ]
     }
    ],
