Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14053,7 +14053,10 @@
       "count: 352\tCoord: [0.6 0.6]\t\tAcc: 18.46590909090909\tLoss: 33.13\n",
       "count: 354\tCoord: [0.8 0.6]\t\tAcc: 14.772727272727273\tLoss: 50.64\n",
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 14.630681818181818\tLoss: 97.707\n",
-      "Coord: [-1.   0.7]\tAcc: 8\tLoss: 266.0443\r"
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 9.019886363636363\tLoss: 168.575\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 9.659090909090908\tLoss: 95.143\n",
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 10.298295454545455\tLoss: 52.332\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 17.47159090909091\tLoss: 20.792\n"
      ]
     }
    ],
