Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14161,7 +14161,10 @@
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 32.95454545454545\tLoss: 11.466\n",
       "count: 368\tCoord: [0.1 0.7]\t\tAcc: 31.74715909090909\tLoss: 12.704\n",
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 23.224431818181817\tLoss: 22.024\n",
-      "Coord: [0.4 0.7]\tAcc: 30\tLoss: 29.298\r"
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 17.258522727272727\tLoss: 41.382\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 14.772727272727273\tLoss: 82.564\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 13.423295454545455\tLoss: 156.298\n",
+      "Coord: [1.  0.7]\tAcc: 20\tLoss: 239.809\r"
      ]
     }
    ],
