--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14097,7 +14097,9 @@
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 15.056818181818182\tLoss: 11.843\n",
       "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 11.008522727272727\tLoss: 11.618\n",
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 12.784090909090908\tLoss: 12.459\n",
-      "Coord: [-0.6  0.3]\tAcc: 20\tLoss: 12.147\r"
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 19.389204545454547\tLoss: 11.85\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 47.79829545454545\tLoss: 5.541\n",
+      "Coord: [-0.2  0.3]\tAcc: 78\tLoss: 3.238\r"
      ]
     }
    ],
