Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14099,7 +14099,9 @@
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 12.784090909090908\tLoss: 12.459\n",
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 19.389204545454547\tLoss: 11.85\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 47.79829545454545\tLoss: 5.541\n",
-      "Coord: [-0.2  0.3]\tAcc: 78\tLoss: 3.238\r"
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 72.23011363636364\tLoss: 2.033\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 68.89204545454545\tLoss: 2.507\n",
+      "Coord: [0.2 0.3]\tAcc: 81\tLoss: 4.463\r"
      ]
     }
    ],
