--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14056,7 +14056,11 @@
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 9.019886363636363\tLoss: 168.575\n",
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 9.659090909090908\tLoss: 95.143\n",
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 10.298295454545455\tLoss: 52.332\n",
-      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 17.47159090909091\tLoss: 20.792\n"
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 17.47159090909091\tLoss: 20.792\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 31.107954545454547\tLoss: 10.486\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 32.59943181818182\tLoss: 10.947\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 27.556818181818183\tLoss: 17.109\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 19.957386363636363\tLoss: 26.116\n"
      ]
     }
    ],
