Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14101,7 +14101,9 @@
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 47.79829545454545\tLoss: 5.541\n",
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 72.23011363636364\tLoss: 2.033\n",
       "count: 284\tCoord: [0.1 0.3]\t\tAcc: 68.89204545454545\tLoss: 2.507\n",
-      "Coord: [0.2 0.3]\tAcc: 81\tLoss: 4.463\r"
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 41.40625\tLoss: 6.383\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 26.491477272727273\tLoss: 9.77\n",
+      "Coord: [0.6 0.3]\tAcc: 42\tLoss: 9.1121\r"
      ]
     }
    ],
