Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14060,7 +14060,11 @@
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 31.107954545454547\tLoss: 10.486\n",
       "count: 368\tCoord: [0.1 0.7]\t\tAcc: 32.59943181818182\tLoss: 10.947\n",
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 27.556818181818183\tLoss: 17.109\n",
-      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 19.957386363636363\tLoss: 26.116\n"
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 19.957386363636363\tLoss: 26.116\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 15.411931818181818\tLoss: 43.48\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 13.920454545454545\tLoss: 83.114\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 8.877840909090908\tLoss: 323.937\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 9.588068181818182\tLoss: 144.813\n"
      ]
     }
    ],
