Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14164,7 +14164,15 @@
       "count: 372\tCoord: [0.5 0.7]\t\tAcc: 17.258522727272727\tLoss: 41.382\n",
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 14.772727272727273\tLoss: 82.564\n",
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 13.423295454545455\tLoss: 156.298\n",
-      "Coord: [1.  0.7]\tAcc: 20\tLoss: 239.809\r"
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 10.511363636363637\tLoss: 444.16\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 11.860795454545455\tLoss: 137.902\n",
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 13.068181818181818\tLoss: 62.097\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 15.127840909090908\tLoss: 33.494\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 20.170454545454547\tLoss: 19.893\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 25.568181818181817\tLoss: 17.473\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 20.80965909090909\tLoss: 24.228\n",
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 17.258522727272727\tLoss: 42.907\n",
+      "Coord: [0.5 0.8]\tAcc: 23\tLoss: 59.609\r"
      ]
     }
    ],
