--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14103,7 +14103,9 @@
       "count: 284\tCoord: [0.1 0.3]\t\tAcc: 68.89204545454545\tLoss: 2.507\n",
       "count: 286\tCoord: [0.3 0.3]\t\tAcc: 41.40625\tLoss: 6.383\n",
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 26.491477272727273\tLoss: 9.77\n",
-      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 20.80965909090909\tLoss: 11.171\n"
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 20.80965909090909\tLoss: 11.171\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 15.696022727272727\tLoss: 11.723\n",
+      "Coord: [1.  0.3]\tAcc: 22\tLoss: 10.558\r"
      ]
     }
    ],
