Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14064,7 +14064,11 @@
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 15.411931818181818\tLoss: 43.48\n",
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 13.920454545454545\tLoss: 83.114\n",
       "count: 378\tCoord: [-1.   0.8]\t\tAcc: 8.877840909090908\tLoss: 323.937\n",
-      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 9.588068181818182\tLoss: 144.813\n"
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 9.588068181818182\tLoss: 144.813\n",
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 9.801136363636363\tLoss: 84.681\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 11.079545454545455\tLoss: 40.02\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 19.460227272727273\tLoss: 17.378\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 25.710227272727273\tLoss: 14.625\n"
      ]
     }
    ],
