--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14105,7 +14105,9 @@
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 26.491477272727273\tLoss: 9.77\n",
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 20.80965909090909\tLoss: 11.171\n",
       "count: 292\tCoord: [0.9 0.3]\t\tAcc: 15.696022727272727\tLoss: 11.723\n",
-      "Coord: [1.  0.3]\tAcc: 22\tLoss: 10.558\r"
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 10.227272727272727\tLoss: 15.203\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 11.71875\tLoss: 13.095\n",
+      "Coord: [-0.7  0.4]\tAcc: 18\tLoss: 12.327\r"
      ]
     }
    ],
