Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14107,7 +14107,8 @@
       "count: 292\tCoord: [0.9 0.3]\t\tAcc: 15.696022727272727\tLoss: 11.723\n",
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 10.227272727272727\tLoss: 15.203\n",
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 11.71875\tLoss: 13.095\n",
-      "Coord: [-0.7  0.4]\tAcc: 18\tLoss: 12.327\r"
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 14.84375\tLoss: 13.942\n",
+      "Coord: [-0.5  0.4]\tAcc: 21\tLoss: 13.703\r"
      ]
     }
    ],
