Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14108,7 +14108,8 @@
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 10.227272727272727\tLoss: 15.203\n",
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 11.71875\tLoss: 13.095\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 14.84375\tLoss: 13.942\n",
-      "Coord: [-0.5  0.4]\tAcc: 21\tLoss: 13.703\r"
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 26.136363636363637\tLoss: 10.853\n",
+      "Coord: [-0.3  0.4]\tAcc: 43\tLoss: 7.901\r"
      ]
     }
    ],
