Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14172,7 +14172,15 @@
       "count: 388\tCoord: [0.  0.8]\t\tAcc: 25.568181818181817\tLoss: 17.473\n",
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 20.80965909090909\tLoss: 24.228\n",
       "count: 392\tCoord: [0.4 0.8]\t\tAcc: 17.258522727272727\tLoss: 42.907\n",
-      "Coord: [0.5 0.8]\tAcc: 23\tLoss: 59.609\r"
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 14.0625\tLoss: 81.444\n",
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 13.352272727272727\tLoss: 152.709\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 13.068181818181818\tLoss: 283.869\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 10.582386363636363\tLoss: 327.731\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 13.28125\tLoss: 115.186\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 13.707386363636363\tLoss: 64.28\n",
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 14.985795454545455\tLoss: 34.57\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 18.607954545454547\tLoss: 26.036\n",
+      "Coord: [0.  0.9]\tAcc: 29\tLoss: 25.169\r"
      ]
     }
    ],
