Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14109,7 +14109,9 @@
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 11.71875\tLoss: 13.095\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 14.84375\tLoss: 13.942\n",
       "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 26.136363636363637\tLoss: 10.853\n",
-      "Coord: [-0.3  0.4]\tAcc: 43\tLoss: 7.901\r"
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 50.0\tLoss: 5.642\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 58.38068181818182\tLoss: 3.793\n",
+      "Coord: [0.1 0.4]\tAcc: 70\tLoss: 5.185\r"
      ]
     }
    ],
