Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14111,7 +14111,9 @@
       "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 26.136363636363637\tLoss: 10.853\n",
       "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 50.0\tLoss: 5.642\n",
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 58.38068181818182\tLoss: 3.793\n",
-      "Coord: [0.1 0.4]\tAcc: 70\tLoss: 5.185\r"
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 45.80965909090909\tLoss: 5.949\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 28.62215909090909\tLoss: 9.164\n",
+      "Coord: [0.5 0.4]\tAcc: 38\tLoss: 9.0367\r"
      ]
     }
    ],
