--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14072,7 +14072,11 @@
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 23.792613636363637\tLoss: 18.278\n",
       "count: 392\tCoord: [0.4 0.8]\t\tAcc: 19.460227272727273\tLoss: 25.645\n",
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 16.12215909090909\tLoss: 35.231\n",
-      "Coord: [0.7 0.8]\tAcc: 18\tLoss: 46.493\r"
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 14.630681818181818\tLoss: 63.661\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 12.002840909090908\tLoss: 151.734\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 8.806818181818182\tLoss: 243.146\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 9.588068181818182\tLoss: 134.454\n",
+      "Coord: [-0.6  0.9]\tAcc: 11\tLoss: 98.0466\r"
      ]
     }
    ],
