Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14113,7 +14113,9 @@
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 58.38068181818182\tLoss: 3.793\n",
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 45.80965909090909\tLoss: 5.949\n",
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 28.62215909090909\tLoss: 9.164\n",
-      "Coord: [0.5 0.4]\tAcc: 38\tLoss: 9.0367\r"
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 20.738636363636363\tLoss: 11.062\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 16.761363636363637\tLoss: 12.151\n",
+      "Coord: [0.9 0.4]\tAcc: 23\tLoss: 12.003\r"
      ]
     }
    ],
