--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14076,7 +14076,11 @@
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 12.002840909090908\tLoss: 151.734\n",
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 8.806818181818182\tLoss: 243.146\n",
       "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 9.588068181818182\tLoss: 134.454\n",
-      "Coord: [-0.6  0.9]\tAcc: 11\tLoss: 98.0466\r"
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 10.15625\tLoss: 70.617\n",
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 12.428977272727273\tLoss: 32.254\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 18.963068181818183\tLoss: 20.727\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 20.454545454545453\tLoss: 22.352\n",
+      "Coord: [0.2 0.9]\tAcc: 26\tLoss: 20.133\r"
      ]
     }
    ],
