Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -14180,7 +14180,14 @@
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 13.707386363636363\tLoss: 64.28\n",
       "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 14.985795454545455\tLoss: 34.57\n",
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 18.607954545454547\tLoss: 26.036\n",
-      "Coord: [0.  0.9]\tAcc: 29\tLoss: 25.169\r"
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 17.613636363636363\tLoss: 29.926\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 15.696022727272727\tLoss: 46.079\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 12.997159090909092\tLoss: 83.89\n",
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 12.855113636363637\tLoss: 155.999\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 12.215909090909092\tLoss: 278.652\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 10.653409090909092\tLoss: 738.087\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 11.576704545454545\tLoss: 241.092\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 12.286931818181818\tLoss: 116.772\n"
      ]
     }
    ],
