Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14115,7 +14115,9 @@
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 28.62215909090909\tLoss: 9.164\n",
       "count: 310\tCoord: [0.6 0.4]\t\tAcc: 20.738636363636363\tLoss: 11.062\n",
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 16.761363636363637\tLoss: 12.151\n",
-      "Coord: [0.9 0.4]\tAcc: 23\tLoss: 12.003\r"
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 13.139204545454545\tLoss: 12.617\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.795454545454545\tLoss: 15.84\n",
+      "Coord: [-0.8  0.5]\tAcc: 18\tLoss: 13.695\r"
      ]
     }
    ],
