--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14117,7 +14117,9 @@
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 16.761363636363637\tLoss: 12.151\n",
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 13.139204545454545\tLoss: 12.617\n",
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.795454545454545\tLoss: 15.84\n",
-      "Coord: [-0.8  0.5]\tAcc: 18\tLoss: 13.695\r"
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 11.434659090909092\tLoss: 15.802\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 15.553977272727273\tLoss: 15.249\n",
+      "Coord: [-0.4  0.5]\tAcc: 24\tLoss: 14.402\r"
      ]
     }
    ],
