Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -14080,7 +14080,11 @@
       "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 12.428977272727273\tLoss: 32.254\n",
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 18.963068181818183\tLoss: 20.727\n",
       "count: 410\tCoord: [0.1 0.9]\t\tAcc: 20.454545454545453\tLoss: 22.352\n",
-      "Coord: [0.2 0.9]\tAcc: 26\tLoss: 20.133\r"
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 19.03409090909091\tLoss: 28.121\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 15.340909090909092\tLoss: 34.37\n",
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 13.139204545454545\tLoss: 51.608\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 13.28125\tLoss: 105.112\n",
+      "Coord: [-1.  1.]\tAcc: 8\tLoss: 493.3622\r"
      ]
     }
    ],
